--- a/webview_flutter/codelab_rebuild.yaml
+++ b/webview_flutter/codelab_rebuild.yaml
@@ -99,8 +99,8 @@ steps:
             @override
             void initState() {
               super.initState();
-              controller =
-                  WebViewController()..loadRequest(Uri.parse('https://flutter.dev'));
+              controller = WebViewController()
+                ..loadRequest(Uri.parse('https://flutter.dev'));
             }
 
             @override
@@ -148,28 +148,27 @@ steps:
             @override
             void initState() {
               super.initState();
-              controller =
-                  WebViewController()
-                    ..setNavigationDelegate(
-                      NavigationDelegate(
-                        onPageStarted: (url) {
-                          setState(() {
-                            loadingPercentage = 0;
-                          });
-                        },
-                        onProgress: (progress) {
-                          setState(() {
-                            loadingPercentage = progress;
-                          });
-                        },
-                        onPageFinished: (url) {
-                          setState(() {
-                            loadingPercentage = 100;
-                          });
-                        },
-                      ),
-                    )
-                    ..loadRequest(Uri.parse('https://flutter.dev'));
+              controller = WebViewController()
+                ..setNavigationDelegate(
+                  NavigationDelegate(
+                    onPageStarted: (url) {
+                      setState(() {
+                        loadingPercentage = 0;
+                      });
+                    },
+                    onProgress: (progress) {
+                      setState(() {
+                        loadingPercentage = progress;
+                      });
+                    },
+                    onPageFinished: (url) {
+                      setState(() {
+                        loadingPercentage = 100;
+                      });
+                    },
+                  ),
+                )
+                ..loadRequest(Uri.parse('https://flutter.dev'));
             }
 
             @override
@@ -207,8 +206,8 @@ steps:
           -  @override
           -  void initState() {
           -    super.initState();
-          -    controller =
-          -        WebViewController()..loadRequest(Uri.parse('https://flutter.dev'));
+          -    controller = WebViewController()
+          -      ..loadRequest(Uri.parse('https://flutter.dev'));
           -  }
           -
              @override
@@ -309,8 +308,8 @@ steps:
           +  @override
           +  void initState() {
           +    super.initState();
-          +    controller =
-          +        WebViewController()..loadRequest(Uri.parse('https://flutter.dev'));
+          +    controller = WebViewController()
+          +      ..loadRequest(Uri.parse('https://flutter.dev'));
           +  }
           +
              @override
@@ -342,7 +341,7 @@ steps:
            
              @override
              State<WebViewStack> createState() => _WebViewStackState();
-          @@ -14,40 +16,36 @@ class WebViewStack extends StatefulWidget {
+          @@ -14,39 +16,36 @@ class WebViewStack extends StatefulWidget {
            
            class _WebViewStackState extends State<WebViewStack> {
              var loadingPercentage = 0;
@@ -351,28 +350,27 @@ steps:
              @override
              void initState() {
                super.initState();
-          -    controller =
-          -        WebViewController()
-          -          ..setNavigationDelegate(
-          -            NavigationDelegate(
-          -              onPageStarted: (url) {
-          -                setState(() {
-          -                  loadingPercentage = 0;
-          -                });
-          -              },
-          -              onProgress: (progress) {
-          -                setState(() {
-          -                  loadingPercentage = progress;
-          -                });
-          -              },
-          -              onPageFinished: (url) {
-          -                setState(() {
-          -                  loadingPercentage = 100;
-          -                });
-          -              },
-          -            ),
-          -          )
-          -          ..loadRequest(Uri.parse('https://flutter.dev'));
+          -    controller = WebViewController()
+          -      ..setNavigationDelegate(
+          -        NavigationDelegate(
+          -          onPageStarted: (url) {
+          -            setState(() {
+          -              loadingPercentage = 0;
+          -            });
+          -          },
+          -          onProgress: (progress) {
+          -            setState(() {
+          -              loadingPercentage = progress;
+          -            });
+          -          },
+          -          onPageFinished: (url) {
+          -            setState(() {
+          -              loadingPercentage = 100;
+          -            });
+          -          },
+          -        ),
+          -      )
+          -      ..loadRequest(Uri.parse('https://flutter.dev'));
           +    widget.controller.setNavigationDelegate(
           +      NavigationDelegate(
           +        onPageStarted: (url) {
@@ -467,13 +465,12 @@ steps:
                       await controller.loadRequest(Uri.parse('https://youtube.com'));
                   }
                 },
-                itemBuilder:
-                    (context) => [
-                      const PopupMenuItem<_MenuOptions>(
-                        value: _MenuOptions.navigationDelegate,
-                        child: Text('Navigate to YouTube'),
-                      ),
-                    ],
+                itemBuilder: (context) => [
+                  const PopupMenuItem<_MenuOptions>(
+                    value: _MenuOptions.navigationDelegate,
+                    child: Text('Navigate to YouTube'),
+                  ),
+                ],
               );
             }
           }
@@ -552,16 +549,16 @@ steps:
           +            ).showSnackBar(SnackBar(content: Text('$userAgent')));
                    }
                  },
-                 itemBuilder:
-          @@ -27,6 +41,10 @@ class Menu extends StatelessWidget {
-                         value: _MenuOptions.navigationDelegate,
-                         child: Text('Navigate to YouTube'),
-                       ),
-          +            const PopupMenuItem<_MenuOptions>(
-          +              value: _MenuOptions.userAgent,
-          +              child: Text('Show user-agent'),
-          +            ),
-                     ],
+                 itemBuilder: (context) => [
+          @@ -26,6 +40,10 @@ class Menu extends StatelessWidget {
+                     value: _MenuOptions.navigationDelegate,
+                     child: Text('Navigate to YouTube'),
+                   ),
+          +        const PopupMenuItem<_MenuOptions>(
+          +          value: _MenuOptions.userAgent,
+          +          child: Text('Show user-agent'),
+          +        ),
+                 ],
                );
              }
       - name: Patch lib/src/web_view_stack.dart
@@ -677,16 +674,16 @@ steps:
           +req.send();''');
                    }
                  },
-                 itemBuilder:
-          @@ -45,6 +58,10 @@ class _MenuState extends State<Menu> {
-                         value: _MenuOptions.userAgent,
-                         child: Text('Show user-agent'),
-                       ),
-          +            const PopupMenuItem<_MenuOptions>(
-          +              value: _MenuOptions.javascriptChannel,
-          +              child: Text('Lookup IP Address'),
-          +            ),
-                     ],
+                 itemBuilder: (context) => [
+          @@ -44,6 +57,10 @@ class _MenuState extends State<Menu> {
+                     value: _MenuOptions.userAgent,
+                     child: Text('Show user-agent'),
+                   ),
+          +        const PopupMenuItem<_MenuOptions>(
+          +          value: _MenuOptions.javascriptChannel,
+          +          child: Text('Lookup IP Address'),
+          +        ),
+                 ],
                );
              }
       - name: Patch lib/src/web_view_stack.dart
@@ -767,32 +764,32 @@ steps:
           +            await _onRemoveCookie(widget.controller);
                    }
                  },
-                 itemBuilder:
-          @@ -62,7 +83,81 @@ req.send();''');
-                         value: _MenuOptions.javascriptChannel,
-                         child: Text('Lookup IP Address'),
-                       ),
-          +            const PopupMenuItem<_MenuOptions>(
-          +              value: _MenuOptions.clearCookies,
-          +              child: Text('Clear cookies'),
-          +            ),
-          +            const PopupMenuItem<_MenuOptions>(
-          +              value: _MenuOptions.listCookies,
-          +              child: Text('List cookies'),
-          +            ),
-          +            const PopupMenuItem<_MenuOptions>(
-          +              value: _MenuOptions.addCookie,
-          +              child: Text('Add cookie'),
-          +            ),
-          +            const PopupMenuItem<_MenuOptions>(
-          +              value: _MenuOptions.setCookie,
-          +              child: Text('Set cookie'),
-          +            ),
-          +            const PopupMenuItem<_MenuOptions>(
-          +              value: _MenuOptions.removeCookie,
-          +              child: Text('Remove cookie'),
-          +            ),
-                     ],
+                 itemBuilder: (context) => [
+          @@ -61,7 +82,81 @@ req.send();''');
+                     value: _MenuOptions.javascriptChannel,
+                     child: Text('Lookup IP Address'),
+                   ),
+          +        const PopupMenuItem<_MenuOptions>(
+          +          value: _MenuOptions.clearCookies,
+          +          child: Text('Clear cookies'),
+          +        ),
+          +        const PopupMenuItem<_MenuOptions>(
+          +          value: _MenuOptions.listCookies,
+          +          child: Text('List cookies'),
+          +        ),
+          +        const PopupMenuItem<_MenuOptions>(
+          +          value: _MenuOptions.addCookie,
+          +          child: Text('Add cookie'),
+          +        ),
+          +        const PopupMenuItem<_MenuOptions>(
+          +          value: _MenuOptions.setCookie,
+          +          child: Text('Set cookie'),
+          +        ),
+          +        const PopupMenuItem<_MenuOptions>(
+          +          value: _MenuOptions.removeCookie,
+          +          child: Text('Remove cookie'),
+          +        ),
+                 ],
                );
              }
           +
@@ -937,27 +934,27 @@ steps:
           +            await _onLoadHtmlStringExample(widget.controller, context);
                    }
                  },
-                 itemBuilder:
-          @@ -103,6 +136,18 @@ req.send();''');
-                         value: _MenuOptions.removeCookie,
-                         child: Text('Remove cookie'),
-                       ),
-          +            const PopupMenuItem<_MenuOptions>(
-          +              value: _MenuOptions.loadFlutterAsset,
-          +              child: Text('Load Flutter Asset'),
-          +            ),
-          +            const PopupMenuItem<_MenuOptions>(
-          +              value: _MenuOptions.loadHtmlString,
-          +              child: Text('Load HTML string'),
-          +            ),
-          +            const PopupMenuItem<_MenuOptions>(
-          +              value: _MenuOptions.loadLocalFile,
-          +              child: Text('Load local file'),
-          +            ),
-                     ],
+                 itemBuilder: (context) => [
+          @@ -102,6 +135,18 @@ req.send();''');
+                     value: _MenuOptions.removeCookie,
+                     child: Text('Remove cookie'),
+                   ),
+          +        const PopupMenuItem<_MenuOptions>(
+          +          value: _MenuOptions.loadFlutterAsset,
+          +          child: Text('Load Flutter Asset'),
+          +        ),
+          +        const PopupMenuItem<_MenuOptions>(
+          +          value: _MenuOptions.loadHtmlString,
+          +          child: Text('Load HTML string'),
+          +        ),
+          +        const PopupMenuItem<_MenuOptions>(
+          +          value: _MenuOptions.loadLocalFile,
+          +          child: Text('Load local file'),
+          +        ),
+                 ],
                );
              }
-          @@ -160,4 +205,37 @@ req.send();''');
+          @@ -159,4 +204,37 @@ req.send();''');
                  context,
                ).showSnackBar(const SnackBar(content: Text('Custom cookie removed.')));
              }
