--- a/tfrs-flutter/codelab_rebuild.yaml
+++ b/tfrs-flutter/codelab_rebuild.yaml
@@ -125,8 +125,9 @@ steps:
                                   itemCount: _movieList.length,
                                   itemBuilder: (context, index) {
                                     return ListTile(
-                                      leading:
-                                          _movieList.isEmpty ? null : const FlutterLogo(),
+                                      leading: _movieList.isEmpty
+                                          ? null
+                                          : const FlutterLogo(),
                                       title: Text(_movieList[index]),
                                     );
                                   },
