--- a/namer/step_07_b_convert_to_stateful/pubspec.yaml
+++ b/namer/step_07_b_convert_to_stateful/pubspec.yaml
@@ -1,9 +1,7 @@
 name: namer_app
-description: A new Flutter project.
-
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-version: 0.0.1+1
+description: "A new Flutter project."
+publish_to: 'none'
+version: 0.1.0
 
 environment:
   sdk: ^3.8.0-0
@@ -11,14 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   english_words: ^4.0.0
-  provider: ^6.1.2
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
 
 flutter:
