--- a/boring_to_beautiful/step_07/pubspec.yaml
+++ b/boring_to_beautiful/step_07/pubspec.yaml
@@ -1,7 +1,7 @@
 name: myartist
-description: A new Flutter project.
-publish_to: "none"
-version: 1.0.0
+description: "A new Flutter project."
+publish_to: 'none'
+version: 0.1.0
 
 environment:
   sdk: ^3.8.0-0
@@ -29,8 +29,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.15
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
   freezed: ^3.0.6
 
 flutter:
